updated email template with more big links in the body and redundant background color: one in a wraping new table and other in a wraping body tag to prevent some email client behaviors.

--- a/old/email-notification/mail-notif-template-new.html
+++ b/old/email-notification/mail-notif-template-new.html
@@ -1,35 +1,40 @@
 <body style="margin: 0; background-color: #e9e8e9;">
-	<table style="	width: 520px; margin: 100px auto auto; font-family: Arial, Helvetica, sans-serif;">
-		<tr><td colspan="2" style="display: block; border-top: 1px solid #d2d2d2; border-bottom: 1px solid white; height: 0; padding: 0;"></td></tr>
+	<table cellspacing="0" cellpadding="0" border="0" width="100%">
 		<tr>
-			<td colspan="2" style="color: #b1b1b1; padding-top: 20px;"><p>The message <span style="color: #575757;">Tutorial para la Carpeta de Entrada</span> in <span style="color: #575757;">kune-usabilidad-es</span> was updated by <span style="color: #575757;">samer</span> at <span style="color: #575757;">kune.cc.</span></p>
-			</td>
-		</tr>
-		<tr>
-			<td style="padding-top: 20px; padding-bottom: 100px;">
-				<p style="margin: 0;"><a href="#" style="text-decoration: none; color: #1876c9; font-size: 12px;">Read in context</a></p>
-				<p style="margin: 0;"><a href="#" style="text-decoration: none; color: #1876c9; font-size: 12px;">Read in your inbox</a></p>
-				<p style="margin: 0;"><a href="#" style="text-decoration: none; color: #1876c9; font-size: 12px;">samer@kune.cc</a></p>
-			</td>
-		</tr>
-		<tr><td colspan="2" style="display: block; border-top: 1px solid #d2d2d2; border-bottom: 1px solid white; height: 0; padding: 0;"></td></tr>
-		<tr>
-			<td style="padding-top: 10px; width: 350px;vertical-align: top;">
-				<img src="logo-kune-email.png">
-			</td>
-			<td style="padding-top: 8px; padding-bottom: 10px;">
-				<p style="font-weight: bold; margin: 0; color: #959595; font-size: 12px;">Comunicate with others,</p>
-				<p style="font-weight: bold; margin: 0; color: #959595; font-size: 12px;">work in collaboration</p>
-				<p style="font-weight: bold; margin: 0; color: #959595; font-size: 12px;">and share with the world</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2" style="padding: 10px; background-color: #fffeff; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; font-size: 11px; color: #aeaeae;">
-				<p>Images not displaying properly? Add <span style="color: #575757;">noreply@kune.cc</span> to your address book.</p>
-				<p>To ensure this email always reaches your inbox, please add noreply@kune.cc to your address book. If you prefer not to receive this emails in the future, please update your preferences <a href="#" style="text-decoration: none; color: #1876c9;">in this link.</a></p>
+			<td class="bakg" bgcolor="#e9e8e9" style="padding-bottom: 241px;">
+				<table style="	width: 520px; margin: 100px auto auto; font-family: Arial, Helvetica, sans-serif;">
+					<tr><td colspan="2" style="display: block; border-top: 1px solid #d2d2d2; border-bottom: 1px solid white; height: 0; padding: 0;"></td></tr>
+					<tr>
+						<td colspan="2" style="color: #b1b1b1; padding-top: 20px;"><p>The message <span style="color: #575757;">Tutorial para la Carpeta de Entrada</span> in <span style="color: #575757;">kune-usabilidad-es</span> was updated by <span style="color: #575757;">samer</span> at <span style="color: #575757;">kune.cc.</span></p>
+						</td>
+					</tr>
+					<tr>
+						<td style="padding-top: 20px; padding-bottom: 100px;">
+							<p><a href="#" style="text-decoration: none; color: #1876c9; font-size: 12px; background-color: #fffeff; padding: 5px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;">Read in context</a></p>
+							<p><a href="#" style="text-decoration: none; color: #1876c9; font-size: 12px; background-color: #fffeff; padding: 5px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;"">Read in your inbox</a></p>
+							<p><a href="#" style="text-decoration: none; color: #1876c9; font-size: 12px; background-color: #fffeff; padding: 5px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;"">samer@kune.cc</a></p>
+						</td>
+					</tr>
+					<tr><td colspan="2" style="display: block; border-top: 1px solid #d2d2d2; border-bottom: 1px solid white; height: 0; padding: 0;"></td></tr>
+					<tr>
+						<td style="padding-top: 10px; width: 350px;vertical-align: top;">
+							<img src="logo-kune-email.png">
+						</td>
+						<td style="padding-top: 8px; padding-bottom: 10px;">
+							<p style="font-weight: bold; margin: 0; color: #959595; font-size: 12px;">Comunicate with others,</p>
+							<p style="font-weight: bold; margin: 0; color: #959595; font-size: 12px;">work in collaboration</p>
+							<p style="font-weight: bold; margin: 0; color: #959595; font-size: 12px;">and share with the world</p>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2" style="padding: 10px; background-color: #fffeff; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; font-size: 11px; color: #aeaeae;">
+							<p>Images not displaying properly? Add <span style="color: #575757;">noreply@kune.cc</span> to your address book.</p>
+							<p>To ensure this email always reaches your inbox, please add noreply@kune.cc to your address book. If you prefer not to receive this emails in the future, please update your preferences <a href="#" style="text-decoration: none; color: #1876c9;">in this link.</a></p>
+						</td>
+					</tr>
+				</table>
 			</td>
 		</tr>
 	</table>
-	<table>
 </body>
 
